#1650 fixed text alignment in dropdown menu

--- a/src/Presentation/Nop.Web/Administration/Content/styles.css
+++ b/src/Presentation/Nop.Web/Administration/Content/styles.css
@@ -114,6 +114,7 @@ ul.common-list {
 .dropdown-menu button {
     border: none;
     padding: 3px 20px;
+    text-align: left;
 }
 .dropdown-menu li:hover {
     background: rgba(0,0,0,0.1);
